Java13 backport